fix spacing

--- a/src/styles/components/sections/projects.scss
+++ b/src/styles/components/sections/projects.scss
@@ -2,7 +2,6 @@
     color: $white-color;
     border-top: 0;
     padding: 1rem;
-    width: 100vw;
     justify-content: center;
     align-items: center;
 
@@ -19,6 +18,7 @@
         flex-direction: column;
         align-items: center;
         min-width: 100%;
+        margin-bottom: 72px;
     }
 
     .project-img {
